--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         background: red;
         /* grid-column: 1/3;*/
         grid-area: footer;
+        grid-area: footer;
       }
     </style>
   </head>
