--- a/index.html
+++ b/index.html
@@ -3,33 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Grid</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      .container {
-        display: grid;
-        grid-template-columns: 200px auto;
-        grid-template-rows: 100px auto 100px;
-        grid-template-areas: "header header" "aside main" "footer footer";
-        height: 100vh;
-      }
-      .grid1 {
-        background: grey;
-        /*grid-column: 1/3;*/
-        grid-area: header;
-      }
-      .grid2 {
-        background: blue;
-        grid-area: aside;
-      }
-      .grid3 {
-        background: green;
-        grid-area: main;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
