--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <div class="grid3"></div>
       <div class="grid4"></div>
     </div>
-    <div></div>
+    <div>Hello world!</div>
   </body>
 </html>
